todeploy-kubernetes/nextcloud/nextcloud/nextcloud.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution :
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/nonessential
                operator: In
                values:
                - "true"
      volumes:
      - name: set-nextcloud-volume
        configMap:
          name: nextcloud-config
          items:
          - key: set-nextcloud.sh
            path: set-nextcloud.sh
          defaultMode: 0744
      - name: apcu-config-volume
        configMap:
          name: nextcloud-config
          items:
          - key: apcu.config
            path: apcu.config
          defaultMode: 0744
      
      - name: nextcloud-web
        persistentVolumeClaim:
          claimName: nextcloud-web-claim
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data-claim
      containers:
      - name: nextcloud
        image: nextcloud:24.0.2-apache
        # command:
        #   - "/set-nextcloud/set-nextcloud.sh"
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        volumeMounts:
          - name: nextcloud-web
            mountPath: "/var/www/html"
          - name: nextcloud-data
            mountPath: "/var/www/html/data"
          # - name: set-nextcloud-volume
          #   mountPath: /set-nextcloud
          # - name: apcu-config-volume
          #   mountPath: /var/www/html/config
          #   subPath: apcu.config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nextcloud
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-https
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: nextcloud-bas-tls
  rules:
  - host: cloud.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-http
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
spec:
  rules:
  - host: cloud.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
